updated all layer files with pdfs, finished conditioning section

--- a/templates/chap1.tex
+++ b/templates/chap1.tex
@@ -51,7 +51,7 @@ Bioenergy  & 2,900       & 6.5    \\ \hline
 Ocean      & 7,400       & 17     \\ \hline
 Geothermal & 140,000,000 & 31,000 \\ \hline
 \end{tabular}
-\caption{Annual renewable energy fluxes, based on Table 1 from \protect\citep{hohmeyer_ipcc_2008}. The ratio noted with * is based on global estimates from the same source.}
+\caption[Annual renewable energy fluxes]{Annual renewable energy fluxes, based on Table 1 from \protect\citep{hohmeyer_ipcc_2008}. The ratio noted with * is based on global estimates from the same source.}
 \label{tab:renewableflux}
 \end{table}
 
