--- a/templates/chap2.tex
+++ b/templates/chap2.tex
@@ -127,7 +127,7 @@ Radiometric survey      & radioactive heat generation                           
 Resistivity survey      & thermal conductivity, temperature gradient               \\
 Temperature survey      & heat flow, geothermal gradient                          
 \end{tabular}
-\caption{Data collection methods useful for characterizing and derisking Earth subsystems that influence geothermal favorability}
+\caption[Data collection methods for geothermal derisking]{Data collection methods useful for characterizing and derisking Earth subsystems that influence geothermal favorability}
 \label{tab:surveytypes}
 \end{table}
 
@@ -204,12 +204,12 @@ This thesis considers a modeling approach where all three types of uncertainty a
 
 \section{Case Study: Southwest New Mexico}\label{ch2:case}
 
-The area of interest (AOI) for the geothermal exploration section of this thesis is a 37,600 square mile region of southwest New Mexico covered by nine counties: Cibola, Valencia, Catron, Socorro, Grant, Sierra, Luna, Dona Ana, and Hidalgo (\textbf{FIGURE}). This region defines the conjunction of four significant geologic provinces. The Southern Basin and Range province extends across the lower third of the AOI. To the east lies the Rio Grande Rift, marked today by the course of the Rio Grande river. The Colorado Plateau covers the north of the study area, and the central-west region is blanketed by the Mogollon-Datil Volcanic Field. The unique environments presented by each province may have implications on geothermal favorability \citep{pepin_new_2018} (Figure \ref{fig:phys-provinces}).
+The area of interest (AOI) for the geothermal exploration section of this thesis is a 37,600 square mile region of southwest New Mexico covered by nine counties: Cibola, Valencia, Catron, Socorro, Grant, Sierra, Luna, Dona Ana, and Hidalgo (Figure \ref{fig:phys-provinces}). This region defines the conjunction of four significant geologic provinces. The Southern Basin and Range province extends across the lower third of the AOI. To the east lies the Rio Grande Rift, marked today by the course of the Rio Grande river. The Colorado Plateau covers the north of the study area, and the central-west region is blanketed by the Mogollon-Datil Volcanic Field. The unique environments presented by each province may have implications on geothermal favorability \citep{pepin_new_2018} (Figure \ref{fig:phys-provinces}).
 
 \begin{figure}[h!]
 \centering
-\includegraphics[scale=.65]{Figure-Physiographic-White.png}
-\caption[Physiographic provinces of southwest New Mexico]{Physiographic provinces within the southwest New Mexico study area. Thick black line defines the AOI. Thinner black lines outline the province boundaries. Plot data from \protect\citep[~Figure 2-2]{bielicki_hydrogeolgic_2015}.}
+\includegraphics[scale=.65]{Figure-Physiographic-White.pdf}
+\caption[Physiographic provinces of southwest New Mexico]{Physiographic provinces within the southwest New Mexico study area. Thick black line defines the AOI. Thinner black lines outline the province boundaries. County boundaries shown in light white lines. Plot data from \protect\citep[~Figure 2-2]{bielicki_hydrogeolgic_2015}.}
 \label{fig:phys-provinces}
 \end{figure}
 
