--- a/templates/main.tex
+++ b/templates/main.tex
@@ -144,7 +144,7 @@
 \include{chap2}
 \include{chap3}
 \appendix
-\include{appa}
-\include{appb}
+%\include{appa}
+%\include{appb}
 \include{biblio}
 \end{document}
