--- a/templates/zotero.bib
+++ b/templates/zotero.bib
@@ -1,9 +1,23 @@
 
-@book{lanl_geothermal_1991,
-	title = {Geothermal gradient contour map of the {United} {States}},
-	publisher = {US Department of Energy, Los Alamos National Laboratory},
-	author = {{LANL} and Kron, Andrea and Wohletz, Kenneth and Tubb, John},
-	year = {1991},
+@article{kaufman_leakage_2012,
+	title = {Leakage in data mining: {Formulation}, detection, and avoidance},
+	volume = {6},
+	issn = {1556-4681},
+	number = {4},
+	journal = {ACM Transactions on Knowledge Discovery from Data (TKDD)},
+	author = {Kaufman, Shachar and Rosset, Saharon and Perlich, Claudia and Stitelman, Ori},
+	year = {2012},
+	note = {Publisher: ACM New York, NY, USA},
+	pages = {1--21},
+}
+
+@misc{scikit-learn_sklearnmodel_selectionstratifiedshufflesplit_2021,
+	title = {sklearn.model\_selection.{StratifiedShuffleSplit}},
+	url = {https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.StratifiedShuffleSplit.html},
+	urldate = {2021-06-20},
+	journal = {StratifiedShuffleSplit — scikit-learn 0.24.2 documentation},
+	author = {{scikit-learn}},
+	year = {2021},
 }
 
 @misc{scikit-learn_sklearnpreprocessingstandardscaler_2021,
@@ -11,8 +25,135 @@
 	url = {https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.StandardScaler.html},
 	urldate = {2021-06-18},
 	journal = {StandardScaler -- scikit-learn 0.24.2 documentation},
-	author = {{scikit-learn}},
+	author = {scikit-learn},
 	year = {2021},
+}
+
+@article{herzog_economic_1997,
+	title = {Economic analysis of heat mining},
+	volume = {19},
+	issn = {0090-8312},
+	number = {1},
+	journal = {Energy sources},
+	author = {Herzog, Howard J and Tester, Jefferson W. and Frank, Marcus G},
+	year = {1997},
+	note = {Publisher: Taylor \& Francis},
+	pages = {19--33},
+}
+
+@techreport{blackwell_geothermal_2014,
+	address = {Washington, D.C},
+	type = {Final {Report}},
+	title = {Geothermal {Data} {Aggregation} {Submission} of {Information} into the {National} {Geothermal} {Data} {System}},
+	shorttitle = {Recovery {Act}},
+	url = {http://www.osti.gov/servlets/purl/1135820},
+	abstract = {The National Geothermal Data System (NGDS) is a Department of Energy funded effort to create a single cataloged source for a variety of geothermal information through a distributed network of databases made available via web services. The NGDS will help identify regions suitable for potential development and further scientific data collection and analysis of geothermal resources as a source for clean, renewable energy. A key NGDS repository or ‘node’ is located at Southern Methodist University developed by a consortium made up of: • SMU Geothermal Laboratory • Siemens Corporate Technology, a division of Siemens Corporation • Bureau of Economic Geology at the University of Texas at Austin • Cornell Energy Institute, Cornell University • Geothermal Resources Council • MLKay Technologies • Texas Tech University • University of North Dakota. The focus of resources and research encompass the United States with particular emphasis on the Gulf Coast (on and off shore), the Great Plains, and the Eastern U.S. The data collection includes the thermal, geological and geophysical characteristics of these area resources. Types of data include, but are not limited to, temperature, heat flow, thermal conductivity, radiogenic heat production, porosity, permeability, geological structure, core geophysical logs, well tests, estimated reservoir volume, in situ stress, oil and gas well fluid chemistry, oil and gas well information, and conventional and enhanced geothermal system related resources. Libraries of publications and reports are combined into a unified, accessible, catalog with links for downloading non-copyrighted items. Field notes, individual temperature logs, site maps and related resources are included to increase data collection knowledge. Additional research based on legacy data to improve quality increases our understanding of the local and regional geology and geothermal characteristics. The software to enable the integration, analysis, and dissemination of this team’s NGDS contributions was developed by Siemens Corporate Technology. The SMU Node interactive application is accessible at http://geothermal.smu.edu. Additionally, files may be downloaded from either http://geothermal.smu.edu:9000/geoserver/web/ or through http://geothermal.smu.edu/static/DownloadFilesButtonPage.htm. The Geothermal Resources Council Library is available at https://www.geothermal-library.org},
+	number = {DOE Project DE-EE0002852},
+	urldate = {2021-06-16},
+	institution = {United States. Dept. of Energy},
+	author = {Blackwell, David and Golm, Michael and Cutright, Bruce and Gosnold, Will and Kay, Martin and Nagihara, Seiichi and Smith, Estela and Tester, Jefferson W.},
+	month = jun,
+	year = {2014},
+	note = {Medium: electronic resource},
+	keywords = {Geothermal Energy, Ngds National Geothermal Data System Heat Flow Geothermal Energy Smu Geothermal Lab Smu Node},
+}
+
+@techreport{jordan_low_2016,
+	address = {Ithaca, NY},
+	title = {Low {Temperature} {Geothermal} {Play} {Fairway} {Analysis} {For} {The} {Appalachian} {Basin}: {Phase} 1 {Revised} {Report} {November} 18, 2016},
+	institution = {Cornell University},
+	author = {Jordan, Teresa E and Richards, Maria C and Horowitz, Franklin G and Camp, Erin and Smith, Jared D and Whealton, Calvin A and Stedinger, Jery R and Hornbach, Matthew J and Frone, Zachary S and Tester, Jefferson W.},
+	year = {2016},
+}
+
+@inproceedings{manente_hybrid_2011,
+	title = {Hybrid solar-geothermal power generation to increase the energy production from a binary geothermal plant},
+	volume = {54907},
+	isbn = {0-7918-5490-6},
+	author = {Manente, Giovanni and Field, Randall and DiPippo, Ronald and Tester, Jefferson W. and Paci, Marco and Rossi, Nicola},
+	year = {2011},
+	pages = {109--119},
+}
+
+@inproceedings{augustine_comparison_2006,
+	title = {A comparison of geothermal with oil and gas well drilling costs},
+	publisher = {Curran Associates Inc New York, New York},
+	author = {Augustine, Chad and Tester, Jefferson W. and Anderson, Brian and Petty, Susan and Livesay, Bill},
+	year = {2006},
+	pages = {5--19},
+}
+
+@inproceedings{tester_integrating_2015,
+	title = {Integrating geothermal energy use into re-building {American} infrastructure},
+	author = {Tester, Jefferson W. and Reber, Tim and Beckers, Koenraad and Lukawski, Maciej and Camp, Erin and Aguirre, Gloria Andrea and Jordan, Terry and Horowitz, Frank},
+	year = {2015},
+}
+
+@article{lukawski_uncertainty_2016,
+	title = {Uncertainty analysis of geothermal well drilling and completion costs},
+	volume = {64},
+	issn = {0375-6505},
+	url = {https://www.sciencedirect.com/science/article/pii/S0375650516300736},
+	doi = {10.1016/j.geothermics.2016.06.017},
+	abstract = {The goal of this study was to characterize the uncertainty associated with the cost of drilling and completion of geothermal wells. Previous research and publications have produced correlations for the average cost of geothermal wells as a function of well depth. This project develops this concept further by using a probabilistic approach to evaluate the distribution of geothermal well costs for a range of well depths. The well cost uncertainty was characterized by identifying the main cost components of geothermal wells and quantifying the probability distributions of the key variables controlling these costs. These probability distributions were determined based on the detailed cost records of U.S. geothermal wells drilled or designed from 2009 to 2013 as well as cost data from drilling equipment manufacturers and vendors. Probability distributions of the key variables were examined to find statistically significant correlations between them. Lastly, the previously determined probability distributions of individual cost components and the correlations between them were input into WellCost Lite, a predictive geothermal drilling cost model, using the Monte Carlo method. This approach allowed us to generate the overall well cost probability distributions for 8000–15,000ft. (2400–4600m) geothermal wells. We have shown that the median geothermal well cost increases exponentially with depth. Deep wells typically have higher cost uncertainty and more positively-skewed cost probability distributions. The correlations presented in this paper can be used to determine the economic feasibility of geothermal energy systems, assess the project risk, and facilitate investment decisions.},
+	language = {en},
+	urldate = {2021-03-20},
+	journal = {Geothermics},
+	author = {Lukawski, Maciej Z. and Silverman, Rachel L. and Tester, Jefferson W.},
+	month = nov,
+	year = {2016},
+	keywords = {Drilling, Drilling cost, EGS, Economic, Uncertainty, Well cost},
+	pages = {382--391},
+}
+
+@techreport{tester_economic_1990,
+	address = {Cambridge, Mass.},
+	title = {Economic predictions for heat mining : a review and analysis of hot dry rock ({HDR}) geothermal energy technology},
+	shorttitle = {Economic predictions for heat mining},
+	url = {https://dspace.mit.edu/handle/1721.1/60650},
+	abstract = {The main objectives of this study were first, to review and analyze several economic assessments of Hot Dry Rock (HDR) geothermal energy systems, and second, to reformulate an economic model for HDR with revised cost components.},
+	language = {en},
+	number = {MIT-EL 90-001},
+	urldate = {2021-02-26},
+	institution = {Massachusetts Institute of Technology. Energy Laboratory},
+	author = {Tester, Jefferson W. and Herzog, Howard J.},
+	year = {1990},
+	note = {Accepted: 2011-01-14T23:32:31Z
+Publisher: [Cambridge, Mass.] : Energy Laboratory, Massachusetts Institute of Technology, 1990},
+	keywords = {economics, geothermal},
+}
+
+@article{tester_impact_2007,
+	title = {Impact of enhanced geothermal systems on {US} energy supply in the twenty-first century},
+	volume = {365},
+	issn = {1364-503X},
+	doi = {10.1098/rsta.2006.1964},
+	abstract = {Recent national focus on the value of increasing US supplies of indigenous renewable energy underscores the need for re-evaluating all alternatives, particularly those that are large and well distributed nationally. A panel was assembled in September 2005 to evaluate the technical and economic feasibility of geothermal becoming a major supplier of primary energy for US base-load generation capacity by 2050. Primary energy produced from both conventional hydrothermal and enhanced (or engineered) geothermal systems (EGS) was considered on a national scale. This paper summarizes the work of the panel which appears in complete form in a 2006 MIT report, 'The future of geothermal energy' parts 1 and 2. In the analysis, a comprehensive national assessment of US geothermal resources, evaluation of drilling and reservoir technologies and economic modelling was carried out. The methodologies employed to estimate geologic heat flow for a range of geothermal resources were utilized to provide detailed quantitative projections of the EGS resource base for the USA. Thirty years of field testing worldwide was evaluated to identify the remaining technology needs with respect to drilling and completing wells, stimulating EGS reservoirs and converting geothermal heat to electricity in surface power and energy recovery systems. Economic modelling was used to develop long-term projections of EGS in the USA for supplying electricity and thermal energy. Sensitivities to capital costs for drilling, stimulation and power plant construction, and financial factors, learning curve estimates, and uncertainties and risks were considered.},
+	language = {eng},
+	number = {1853},
+	journal = {Philosophical Transactions. Series A, Mathematical, Physical, and Engineering Sciences},
+	author = {Tester, Jefferson W. and Anderson, Brian J. and Batchelor, Anthony S. and Blackwell, David D. and DiPippo, Ronald and Drake, Elisabeth M. and Garnish, John and Livesay, Bill and Moore, Michal C. and Nichols, Kenneth and Petty, Susan and Toksoz, M. Nafi and Veatch, Ralph W. and Baria, Roy and Augustine, Chad and Murphy, Enda and Negraru, Petru and Richards, Maria},
+	year = {2007},
+	pmid = {17272236},
+	keywords = {Conservation of Energy Resources, Electricity, Energy-Generating Resources, Forecasting, Heating, Power Plants, Technology Assessment, Biomedical, United States},
+	pages = {1057--1094},
+}
+
+@inproceedings{beckers_introducing_2013,
+	title = {Introducing {GEOPHIRES} v1.0: {Software} {Package} for {Estimating} {Levelized} {Cost} of {Electricity} and/or {Heat} from {Enhanced}},
+	shorttitle = {Introducing {GEOPHIRES} v1.0},
+	abstract = {A new computer-based model has been developed to evaluate the levelized cost of electricity and/or direct-use heat from Enhanced Geothermal Systems (EGS). This software upgrades and expands the “MIT-EGS” model used in the 2006 “Future of Geothermal Energy ” study. The upgrades include implementation of the latest geothermal well drilling and power plant cost submodels as well as incorporation of production wellbore heat losses. The main expansion consists of implementing different end-uses, i.e. electricity, direct-use, or combined heat \& power (CHP). The new model “GEOthermal energy for the Production of Heat and Electricity Economically Simulated” (GEOPHIRES) can be used either as a stand-alone},
+	booktitle = {Geothermal {Systems}, {Proceedings}, {Thirty}-{Eighth} {Workshop} on {Geothermal} {Reservoir} {Engineering}},
+	author = {Beckers, Koenraad and Lukawski, Maciej and Reber, Timothy and Anderson, Brian and Moore, Michal and Tester, Jefferson W.},
+	year = {2013},
+	keywords = {Geothermal, economics, geothermal},
+}
+
+@book{lanl_geothermal_1991,
+	title = {Geothermal gradient contour map of the {United} {States}},
+	publisher = {US Department of Energy, Los Alamos National Laboratory},
+	author = {{LANL} and Kron, Andrea and Wohletz, Kenneth and Tubb, John},
+	year = {1991},
 }
 
 @misc{scikit-learn_sklearnpreprocessingpowertransformer_2021,
@@ -187,23 +328,6 @@
 	journal = {ArcGIS Pro {\textbar} Documentation},
 	author = {{ESRI}},
 	year = {2021},
-}
-
-@techreport{blackwell_geothermal_2014,
-	address = {Washington, D.C},
-	type = {Final {Report}},
-	title = {Geothermal {Data} {Aggregation} {Submission} of {Information} into the {National} {Geothermal} {Data} {System}},
-	shorttitle = {Recovery {Act}},
-	url = {http://www.osti.gov/servlets/purl/1135820},
-	abstract = {The National Geothermal Data System (NGDS) is a Department of Energy funded effort to create a single cataloged source for a variety of geothermal information through a distributed network of databases made available via web services. The NGDS will help identify regions suitable for potential development and further scientific data collection and analysis of geothermal resources as a source for clean, renewable energy. A key NGDS repository or ‘node’ is located at Southern Methodist University developed by a consortium made up of: • SMU Geothermal Laboratory • Siemens Corporate Technology, a division of Siemens Corporation • Bureau of Economic Geology at the University of Texas at Austin • Cornell Energy Institute, Cornell University • Geothermal Resources Council • MLKay Technologies • Texas Tech University • University of North Dakota. The focus of resources and research encompass the United States with particular emphasis on the Gulf Coast (on and off shore), the Great Plains, and the Eastern U.S. The data collection includes the thermal, geological and geophysical characteristics of these area resources. Types of data include, but are not limited to, temperature, heat flow, thermal conductivity, radiogenic heat production, porosity, permeability, geological structure, core geophysical logs, well tests, estimated reservoir volume, in situ stress, oil and gas well fluid chemistry, oil and gas well information, and conventional and enhanced geothermal system related resources. Libraries of publications and reports are combined into a unified, accessible, catalog with links for downloading non-copyrighted items. Field notes, individual temperature logs, site maps and related resources are included to increase data collection knowledge. Additional research based on legacy data to improve quality increases our understanding of the local and regional geology and geothermal characteristics. The software to enable the integration, analysis, and dissemination of this team’s NGDS contributions was developed by Siemens Corporate Technology. The SMU Node interactive application is accessible at http://geothermal.smu.edu. Additionally, files may be downloaded from either http://geothermal.smu.edu:9000/geoserver/web/ or through http://geothermal.smu.edu/static/DownloadFilesButtonPage.htm. The Geothermal Resources Council Library is available at https://www.geothermal-library.org},
-	number = {DOE Project DE-EE0002852},
-	urldate = {2021-06-16},
-	institution = {United States. Dept. of Energy},
-	author = {Blackwell, David and Golm, Michael and Cutright, Bruce and Gosnold, Will and Kay, Martin and Nagihara, Seiichi and Smith, Estela and Tester, Jefferson},
-	month = jun,
-	year = {2014},
-	note = {Medium: electronic resource},
-	keywords = {Geothermal Energy, Ngds National Geothermal Data System Heat Flow Geothermal Energy Smu Geothermal Lab Smu Node},
 }
 
 @misc{smu_geothermal_2017,
@@ -794,22 +918,6 @@ This database consists of five major Arc/Info GIS datasets for each state;
 	year = {2013},
 }
 
-@article{tester_impact_2007,
-	title = {Impact of enhanced geothermal systems on {US} energy supply in the twenty-first century},
-	volume = {365},
-	issn = {1364-503X},
-	doi = {10.1098/rsta.2006.1964},
-	abstract = {Recent national focus on the value of increasing US supplies of indigenous renewable energy underscores the need for re-evaluating all alternatives, particularly those that are large and well distributed nationally. A panel was assembled in September 2005 to evaluate the technical and economic feasibility of geothermal becoming a major supplier of primary energy for US base-load generation capacity by 2050. Primary energy produced from both conventional hydrothermal and enhanced (or engineered) geothermal systems (EGS) was considered on a national scale. This paper summarizes the work of the panel which appears in complete form in a 2006 MIT report, 'The future of geothermal energy' parts 1 and 2. In the analysis, a comprehensive national assessment of US geothermal resources, evaluation of drilling and reservoir technologies and economic modelling was carried out. The methodologies employed to estimate geologic heat flow for a range of geothermal resources were utilized to provide detailed quantitative projections of the EGS resource base for the USA. Thirty years of field testing worldwide was evaluated to identify the remaining technology needs with respect to drilling and completing wells, stimulating EGS reservoirs and converting geothermal heat to electricity in surface power and energy recovery systems. Economic modelling was used to develop long-term projections of EGS in the USA for supplying electricity and thermal energy. Sensitivities to capital costs for drilling, stimulation and power plant construction, and financial factors, learning curve estimates, and uncertainties and risks were considered.},
-	language = {eng},
-	number = {1853},
-	journal = {Philosophical Transactions. Series A, Mathematical, Physical, and Engineering Sciences},
-	author = {Tester, Jefferson W. and Anderson, Brian J. and Batchelor, Anthony S. and Blackwell, David D. and DiPippo, Ronald and Drake, Elisabeth M. and Garnish, John and Livesay, Bill and Moore, Michal C. and Nichols, Kenneth and Petty, Susan and Toksoz, M. Nafi and Veatch, Ralph W. and Baria, Roy and Augustine, Chad and Murphy, Enda and Negraru, Petru and Richards, Maria},
-	year = {2007},
-	pmid = {17272236},
-	keywords = {Conservation of Energy Resources, Electricity, Energy-Generating Resources, Forecasting, Heating, Power Plants, Technology Assessment, Biomedical, United States},
-	pages = {1057--1094},
-}
-
 @techreport{blackwell_geothermal_2000,
 	title = {Geothermal {Resource}/{Reservoir} {Investigations} {Based} on {Heat} {Flow} and {Thermal} {Gradient} {Data} for the {United} {States}},
 	url = {https://www.osti.gov/biblio/758787},
@@ -983,14 +1091,6 @@ This database consists of five major Arc/Info GIS datasets for each state;
 	title = {Structurally controlled geothermal systems in the central {Cascades} arc-backarc regime, {Oregon}},
 	institution = {University of Utah},
 	author = {Wannamaker, Philip E},
-	year = {2016},
-}
-
-@techreport{jordan_low_2016,
-	address = {Ithaca, NY},
-	title = {Low {Temperature} {Geothermal} {Play} {Fairway} {Analysis} {For} {The} {Appalachian} {Basin}: {Phase} 1 {Revised} {Report} {November} 18, 2016},
-	institution = {Cornell University},
-	author = {Jordan, Teresa E and Richards, Maria C and Horowitz, Franklin G and Camp, Erin and Smith, Jared D and Whealton, Calvin A and Stedinger, Jery R and Hornbach, Matthew J and Frone, Zachary S and Tester, Jefferson W},
 	year = {2016},
 }
 
@@ -1652,46 +1752,6 @@ Publication Title: Annual Technology Baseline},
 	year = {2016},
 }
 
-@techreport{tester_economic_1990,
-	address = {Cambridge, Mass.},
-	title = {Economic predictions for heat mining : a review and analysis of hot dry rock ({HDR}) geothermal energy technology},
-	shorttitle = {Economic predictions for heat mining},
-	url = {https://dspace.mit.edu/handle/1721.1/60650},
-	abstract = {The main objectives of this study were first, to review and analyze several economic assessments of Hot Dry Rock (HDR) geothermal energy systems, and second, to reformulate an economic model for HDR with revised cost components.},
-	language = {en},
-	number = {MIT-EL 90-001},
-	urldate = {2021-02-26},
-	institution = {Massachusetts Institute of Technology. Energy Laboratory},
-	author = {Tester, Jefferson W. and Herzog, Howard J.},
-	year = {1990},
-	note = {Accepted: 2011-01-14T23:32:31Z
-Publisher: [Cambridge, Mass.] : Energy Laboratory, Massachusetts Institute of Technology, 1990},
-	keywords = {economics, geothermal},
-}
-
-@inproceedings{manente_hybrid_2011,
-	title = {Hybrid solar-geothermal power generation to increase the energy production from a binary geothermal plant},
-	volume = {54907},
-	isbn = {0-7918-5490-6},
-	author = {Manente, Giovanni and Field, Randall and DiPippo, Ronald and Tester, Jefferson W and Paci, Marco and Rossi, Nicola},
-	year = {2011},
-	pages = {109--119},
-}
-
-@inproceedings{augustine_comparison_2006,
-	title = {A comparison of geothermal with oil and gas well drilling costs},
-	publisher = {Curran Associates Inc New York, New York},
-	author = {Augustine, Chad and Tester, Jefferson W and Anderson, Brian and Petty, Susan and Livesay, Bill},
-	year = {2006},
-	pages = {5--19},
-}
-
-@inproceedings{tester_integrating_2015,
-	title = {Integrating geothermal energy use into re-building {American} infrastructure},
-	author = {Tester, Jeff and Reber, Tim and Beckers, Koenraad and Lukawski, Maciej and Camp, Erin and Aguirre, Gloria Andrea and Jordan, Terry and Horowitz, Frank},
-	year = {2015},
-}
-
 @inproceedings{hadi_resource_2010,
 	address = {Bali, Indonesia},
 	title = {Resource risk assessment in geothermal greenfield development; an economic implications},
@@ -1820,23 +1880,6 @@ Publisher: [Cambridge, Mass.] : Energy Laboratory, Massachusetts Institute of Te
 	author = {Dahal, Samir and McDonald, Mark R and Bubach, Bailey and Crowell, Anna M},
 	year = {2012},
 	pages = {637--640},
-}
-
-@article{lukawski_uncertainty_2016,
-	title = {Uncertainty analysis of geothermal well drilling and completion costs},
-	volume = {64},
-	issn = {0375-6505},
-	url = {https://www.sciencedirect.com/science/article/pii/S0375650516300736},
-	doi = {10.1016/j.geothermics.2016.06.017},
-	abstract = {The goal of this study was to characterize the uncertainty associated with the cost of drilling and completion of geothermal wells. Previous research and publications have produced correlations for the average cost of geothermal wells as a function of well depth. This project develops this concept further by using a probabilistic approach to evaluate the distribution of geothermal well costs for a range of well depths. The well cost uncertainty was characterized by identifying the main cost components of geothermal wells and quantifying the probability distributions of the key variables controlling these costs. These probability distributions were determined based on the detailed cost records of U.S. geothermal wells drilled or designed from 2009 to 2013 as well as cost data from drilling equipment manufacturers and vendors. Probability distributions of the key variables were examined to find statistically significant correlations between them. Lastly, the previously determined probability distributions of individual cost components and the correlations between them were input into WellCost Lite, a predictive geothermal drilling cost model, using the Monte Carlo method. This approach allowed us to generate the overall well cost probability distributions for 8000–15,000ft. (2400–4600m) geothermal wells. We have shown that the median geothermal well cost increases exponentially with depth. Deep wells typically have higher cost uncertainty and more positively-skewed cost probability distributions. The correlations presented in this paper can be used to determine the economic feasibility of geothermal energy systems, assess the project risk, and facilitate investment decisions.},
-	language = {en},
-	urldate = {2021-03-20},
-	journal = {Geothermics},
-	author = {Lukawski, Maciej Z. and Silverman, Rachel L. and Tester, Jefferson W.},
-	month = nov,
-	year = {2016},
-	keywords = {Drilling, Drilling cost, EGS, Economic, Uncertainty, Well cost},
-	pages = {382--391},
 }
 
 @article{gerber_defining_2012,
@@ -2065,16 +2108,6 @@ Publication Title: US EIA - Short-Term Energy Outlook},
 	institution = {National Renewable Energy Lab.(NREL), Golden, CO (United States)},
 	author = {Freeman, Janine M and DiOrio, Nicholas A and Blair, Nathan J and Neises, Ty W and Wagner, Michael J and Gilman, Paul and Janzou, Steven},
 	year = {2018},
-}
-
-@inproceedings{beckers_introducing_2013,
-	title = {Introducing {GEOPHIRES} v1.0: {Software} {Package} for {Estimating} {Levelized} {Cost} of {Electricity} and/or {Heat} from {Enhanced}},
-	shorttitle = {Introducing {GEOPHIRES} v1.0},
-	abstract = {A new computer-based model has been developed to evaluate the levelized cost of electricity and/or direct-use heat from Enhanced Geothermal Systems (EGS). This software upgrades and expands the “MIT-EGS” model used in the 2006 “Future of Geothermal Energy ” study. The upgrades include implementation of the latest geothermal well drilling and power plant cost submodels as well as incorporation of production wellbore heat losses. The main expansion consists of implementing different end-uses, i.e. electricity, direct-use, or combined heat \& power (CHP). The new model “GEOthermal energy for the Production of Heat and Electricity Economically Simulated” (GEOPHIRES) can be used either as a stand-alone},
-	booktitle = {Geothermal {Systems}, {Proceedings}, {Thirty}-{Eighth} {Workshop} on {Geothermal} {Reservoir} {Engineering}},
-	author = {Beckers, Koenraad and Lukawski, Maciej and Reber, Timothy and Anderson, Brian and Moore, Michal and Tester, Jefferson},
-	year = {2013},
-	keywords = {Geothermal, economics, geothermal},
 }
 
 @article{tester_future_2006,
